# keyboard-software

./: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
boards/arm/bl654/: Kconfig.board  Kconfig.defconfig  bl654-pinctrl.dtsi  bl654.dts  bl654.yaml  bl654_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/kscan/: CMakeLists.txt  Kconfig  vpk_kscan_matrix.c
drivers/zephyr/dts/bindings/: vendor-prefixes.txt
drivers/zephyr/dts/bindings/kscan/: vpk,kscan-matrix.yaml
scripts/: generateIntellisense.py
src/: bat.cpp  bat.h  hid.h  keyboard.cpp  keyboard.h  led.cpp  led.h  main.cpp  usb_hid.cpp  usb_hid.h
src/bluetooth/: bluetooth.cpp  bluetooth.h  hog.cpp  hog.h
